# DefDAP

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODEOWNERS  DataAnalysisUtilities.sublime-workspace  DicEbsdMapAlignment.ipynb  EbsdTools.py  FepxMesh.py  HoughTransformExample.ipynb  IPFs_JoaoF.html  IPFs_JoaoF.ipynb  Irradiated_new.ipynb  Irradiated_new_newebsd.ipynb  LICENSE  Quat.py  RDR.ipynb  README.md  Read_EBSD.py  SchmidFactorHistogram.ipynb  Untitled-Copy1.ipynb  Untitled.ipynb  ZrH.ipynb  ZrH2.ipynb  ZrH3.ipynb  base.py  calculateKamNxN.ipynb  ebsd.py  errorcomparison-Copy1.ipynb  errorcomparison.ipynb  example_notebook.ipynb  example_notebook_new.ipynb  fepx.py  fepxExampleCommands.py  grainLevelAnalysisNotebook.ipynb  hrdic.py  ipfExample.ipynb  irr.csv  line.csv  (+10 more)
.github/workflows/: release.yaml  test.yaml  test.yml
data/: irr_new.cpr  nirr_new.cpr
defdap/: __init__.py  _accelerated.py  _version.py  base.py  crystal.py  crystal_utils.py  dev-Optical.ipynb  ebsd.py  experiment.py  fepx.py  file_io.py  file_readers.py  file_writers.py  hrdic.py  inspector.py  inspector_optical.py  interactive.py  io.py  main-Optical.ipynb  mixin.py  optical.py  optical_class.ipynb  phase.py  plotting.py  quat.py  utils.py
defdap/slip_systems/: cubic_bcc.txt  cubic_fcc.txt
defdap/test_data/: test-meta-data.xlsx
docs/: .buildinfo  Makefile  README.md  contributing.html  contributing.md  defdap.base.html  defdap.crystal.html  defdap.ebsd.html  defdap.file_readers.html  defdap.hrdic.html  defdap.html  defdap.inspector.html  defdap.plotting.html  defdap.quat.html  defdap.utils.html  example_analysis.html  genindex.html  index.html  installation.html  introduction.html  modules.html  objects.inv  papers.html  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/.doctrees/: contributing.doctree  defdap.base.doctree  defdap.crystal.doctree  defdap.doctree  defdap.ebsd.doctree  defdap.file_readers.doctree  defdap.hrdic.doctree  defdap.inspector.doctree  defdap.plotting.doctree  defdap.quat.doctree  defdap.utils.doctree  environment.pickle  example_analysis.doctree  index.doctree  installation.doctree  introduction.doctree  modules.doctree  papers.doctree
docs/_modules/: index.html
docs/_modules/defdap/: base.html  crystal.html  ebsd.html  file_readers.html  hrdic.html  inspector.html  plotting.html  quat.html  utils.html
docs/_sources/: defdap.base.rst.txt  defdap.ebsd.rst.txt  defdap.file_readers.rst.txt  defdap.hrdic.rst.txt  defdap.inspector.rst.txt  defdap.plotting.rst.txt  defdap.quat.rst.txt  defdap.rst.txt  defdap.utils.rst.txt  index.rst.txt  introduction.rst.txt  modules.rst.txt
docs/_static/: documentation_options.js
docs/html/: .buildinfo  .html  defdap.html  defdapAPI.html  example_analysis.html  genindex.html  index.html  installation.html  introduction.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/.doctrees/: .doctree  defdap.doctree  defdapAPI.doctree  environment.pickle  example_analysis.doctree  index.doctree  installation.doctree  introduction.doctree  modules.doctree
docs/html/_modules/: base.html  index.html  quat.html
docs/html/_sources/: defdap.rst.txt  (+5 more)
docs/source/: .rst  conf.py  contributing.rst  defdap.crystal.rst  defdap.rst  howtouse.ipynb  index.rst  installation.rst  introduction.rst  license.rst  modules.rst  papers.rst  userguide.rst
errordata/: fieldfree.TXT  immersion.TXT  stagebias.TXT
example_data/: Map Data 2-DIC area.cpr  corrval.TXT  test.txt
example_data_AH/: dicMapCropDists.txt  dicMapHomogPoints.txt  ebsdData.cpr  ebsdMapHomogPoints.txt
example_data_AH/ipf/: newMap.ctf  newMap_grainMaxSSMeans.txt  newMap_grainMeanMisOris.txt  newMap_grainMeanPhi.txt  newMap_grainMeanPhi1.txt  newMap_grainMeanPhi2.txt
exports/: irr.csv  line.csv  nonirr.csv
newdata/: Irr_cleaned7.cpr  Zr4.cpr  irr_02_cleaned.cpr  irr_02_cleaned8.cpr  irr_02_cleanedfull.cpr  nonirr_02_cleaned.cpr  nonirr_02_cleanedfull.cpr
newdata/newebsd/: i-clean6.cpr  i_boundaries.bmp alias  ni-clean6.cpr
notebooks/: advanced_notebook.ipynb  example_notebook.ipynb  experiment.ipynb  optical.ipynb  test_ipf.ipynb  twin_boundaries.ipynb
scripts/: GB_update.ipynb  nCorrToDavis.m
slip_systems/: hexagonal_noca.txt  hexagonal_withca.txt
tests/: test_ebsd.py  test_hrdic.py  test_io.py  test_quat.py
tests/data/: testDataDIC.txt  testDataEBSD.cpr  testDataEBSD.crc  testOpticalEBSD.cpr
tests/test_data/: example.cpr
zrh/: Zr4H_a.cpr  Zr4H_a_6clean.cpr  Zr4H_a_clean2.cpr  ZrH_b.cpr  ZrH_b_6clean.cpr
(+23 files in other folders)
